--- a/PhloxEngine.vcxproj
+++ b/PhloxEngine.vcxproj
@@ -21,19 +21,25 @@
   <ItemGroup>
     <ClCompile Include="src\engine\AnimatedSprite.cpp" />
     <ClCompile Include="src\engine\Engine.cpp" />
+    <ClCompile Include="src\engine\Input.cpp" />
     <ClCompile Include="src\engine\Sprite.cpp" />
+    <ClCompile Include="src\engine\State.cpp" />
     <ClCompile Include="src\engine\Text.cpp" />
     <ClCompile Include="src\gameName\states\PlayState.cpp" />
+    <ClCompile Include="src\gameName\substates\PauseSubState.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\stb_image_impl.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\engine\AnimatedSprite.h" />
     <ClInclude Include="include\engine\Engine.h" />
+    <ClInclude Include="include\engine\Input.h" />
     <ClInclude Include="include\engine\Sprite.h" />
     <ClInclude Include="include\engine\State.h" />
+    <ClInclude Include="include\engine\SubState.h" />
     <ClInclude Include="include\engine\Text.h" />
     <ClInclude Include="include\gameName\states\PlayState.h" />
+    <ClInclude Include="include\gameName\substates\PauseSubState.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="include\testgame\README.md" />
