--- a/PhloxEngine.vcxproj.filters
+++ b/PhloxEngine.vcxproj.filters
@@ -31,6 +31,12 @@
     <Filter Include="Source Files\gameName\states">
       <UniqueIdentifier>{2c5557ae-b004-4e47-ac20-2ff526d868e5}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\gameName\substates">
+      <UniqueIdentifier>{64f8144d-652b-47a7-9faf-a82d39766042}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\gameName\substates">
+      <UniqueIdentifier>{f02ac184-10e5-47fe-ab75-06c67b692d7e}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
@@ -54,6 +60,15 @@
     <ClCompile Include="src\gameName\states\PlayState.cpp">
       <Filter>Source Files\gameName\states</Filter>
     </ClCompile>
+    <ClCompile Include="src\gameName\substates\PauseSubState.cpp">
+      <Filter>Source Files\gameName\substates</Filter>
+    </ClCompile>
+    <ClCompile Include="src\engine\State.cpp">
+      <Filter>Source Files\engine</Filter>
+    </ClCompile>
+    <ClCompile Include="src\engine\Input.cpp">
+      <Filter>Source Files\engine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\engine\Engine.h">
@@ -72,6 +87,15 @@
       <Filter>Header Files\gameName\states</Filter>
     </ClInclude>
     <ClInclude Include="include\engine\State.h">
+      <Filter>Header Files\engine</Filter>
+    </ClInclude>
+    <ClInclude Include="include\engine\SubState.h">
+      <Filter>Header Files\engine</Filter>
+    </ClInclude>
+    <ClInclude Include="include\gameName\substates\PauseSubState.h">
+      <Filter>Header Files\gameName\substates</Filter>
+    </ClInclude>
+    <ClInclude Include="include\engine\Input.h">
       <Filter>Header Files\engine</Filter>
     </ClInclude>
   </ItemGroup>
