--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,21 @@
 
-/Debug
-/x64
+*.obj
+*.exe
 /.vs
 /enc_temp_folder
-/Release
 /external/libvorbis
 /external/ogg-master
+/obj
+*.log
+*.tlog
+*.pdb
+*.recipe
+*.iobj
+x64/Release/PhloxEngine.vcxproj.FileListAbsolute.txt
+*.ipdb
+*.idb
+.
+/Release/assets
+/x64/assets
+
+Release/PhloxEngine.vcxproj.FileListAbsolute.txt
