--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@ x64/Release/PhloxEngine.vcxproj.FileListAbsolute.txt
 /x64/assets
 
 Release/PhloxEngine.vcxproj.FileListAbsolute.txt
+/Debug/assets
+*.ilk
+*.txt
